cmake_minimum_required(VERSION 3.15)
set(CMAKE_CXX_STANDARD 14)

project(chapter02)

add_executable(chapter02
#        lecture/hello.c
#        lecture/gugu.c
#        lecture/add1.c
#        lecture/add2.c
#        lecture/deposit.c
#        lecture/circle.c
#        exercise/ex01.c
#        exercise/ex02.c
#        exercise/ex03.c
        exercise/ex04.c
)