cmake_minimum_required(VERSION 3.15)
set(CMAKE_CXX_STANDARD 14)

project(chapter02)

add_executable(hello lecture/hello.c)
add_executable(gugu lecture/gugu.c)
add_executable(add1 lecture/add1.c)
add_executable(add2 lecture/add2.c)
add_executable(deposit lecture/deposit.c)
add_executable(circle lecture/circle.c)
add_executable(ex01 programming/ex01.c)
add_executable(ex02 programming/ex02.c)
add_executable(ex03 programming/ex03.c)
add_executable(ex04 programming/ex04.c)
