cmake_minimum_required(VERSION 3.15)
set(CMAKE_CXX_STANDARD 14)

project(chapter03)

add_executable(chapter03
#        lecture/circle_area.c
#        lecture/sizeof.c
#        lecture/dollar2won.c
#        lecture/integer.c
#        lecture/overflow.c
#        lecture/int_const.c
#        lecture/sym_const.c
#        lecture/floating.c
#        lecture/over_under.c
#        lecture/error.c
#        lecture/char_var.c
#        lecture/char_var1.c
#        lecture/escape.c
#        exercise/ex01.c
#        exercise/ex02.c
#        exercise/ex03.c
#        exercise/ex04.c
#        exercise/ex05.c
#        exercise/ex06.c
#        exercise/ex07.c
#        exercise/ex08.c
#        exercise/ex09.c
        exercise/ex10.c
)
