cmake_minimum_required(VERSION 3.15)
set(CMAKE_CXX_STANDARD 14)

project(chapter03)

add_executable(circle_area lecture/circle_area.c)
add_executable(sizeof lecture/sizeof.c)
add_executable(dollar2won lecture/dollar2won.c)
add_executable(integer lecture/integer.c)
add_executable(overflow lecture/overflow.c)
add_executable(int_const lecture/int_const.c)
add_executable(sym_const lecture/sym_const.c)
add_executable(floating lecture/floating.c)
add_executable(over_under lecture/over_under.c)
add_executable(error lecture/error.c)
add_executable(char_var lecture/char_var.c)
add_executable(char_var1 lecture/char_var1.c)
add_executable(escape lecture/escape.c)
add_executable(ex01 programming/ex01.c)
add_executable(ex02 programming/ex02.c)
add_executable(ex03 programming/ex03.c)
add_executable(ex04 programming/ex04.c)
add_executable(ex05 programming/ex05.c)
add_executable(ex06 programming/ex06.c)
add_executable(ex07 programming/ex07.c)
add_executable(ex08 programming/ex08.c)
add_executable(ex09 programming/ex09.c)
add_executable(ex10 programming/ex10.c)
