cmake_minimum_required(VERSION 3.15)
set(CMAKE_CXX_STANDARD 14)

project(chapter04)

add_executable(chapter04
#        lecture/simple_exp.c
#        lecture/arithmetic.c
#        lecture/arithmetic1.c
#        lecture/modulo.c
#        lecture/incdec.c
#        lecture/assignment.c
#        lecture/assignment2.c
#        lecture/relational.c
#        lecture/logic.c
#        lecture/leapyear.c
#        lecture/condition.c
#        lecture/prec.c
#        lecture/typecast.c
#        exercise/ex01.c
#        exercise/ex02.c
#        exercise/ex03.c
#        exercise/ex04.c
#        exercise/ex05.c
#        exercise/ex06.c
#        exercise/ex07.c
#        exercise/ex08.c
#        exercise/ex09.c
        exercise/ex10.c
)
