cmake_minimum_required(VERSION 3.15)
set(CMAKE_CXX_STANDARD 14)

project(chapter05)

add_executable(chapter05
#        lecture/if1.c
#        lecture/if2.c
#        lecture/if_else1.c
#        lecture/if_else2.c
#        lecture/leap_year.c
#        lecture/grade.c
#        lecture/charclass.c
#        lecture/calc1.c
#        lecture/days_in_month.c
        lecture/calc2.c
)
