cmake_minimum_required(VERSION 3.15)
set(CMAKE_CXX_STANDARD 14)

project(chapter06)

add_executable(gugu lecture/gugu.c)
add_executable(sum_while lecture/sum_while.c)
add_executable(average lecture/average.c)
add_executable(gcd lecture/gcd.c)
add_executable(menu lecture/menu.c)
add_executable(game lecture/game.c)
add_executable(sum_for lecture/sum_for.c)
add_executable(draw_box lecture/draw_box.c)
add_executable(factorial lecture/factorial.c)
add_executable(nested_loop1 lecture/nested_loop1.c)
add_executable(nested_loop2 lecture/nested_loop2.c)
