cmake_minimum_required(VERSION 3.15)
set(CMAKE_CXX_STANDARD 14)

project(chapter06)

add_executable(gugu lecture/gugu.c)
add_executable(sum_while lecture/sum_while.c)
add_executable(average lecture/average.c)
add_executable(gcd lecture/gcd.c)
add_executable(menu lecture/menu.c)
add_executable(game lecture/game.c)
add_executable(sum_for lecture/sum_for.c)
add_executable(draw_box lecture/draw_box.c)
add_executable(factorial lecture/factorial.c)
add_executable(nested_loop1 lecture/nested_loop1.c)
add_executable(nested_loop2 lecture/nested_loop2.c)
add_executable(square_root lecture/square_root.c)
add_executable(average1 lecture/average1.c)
add_executable(to_upper lecture/to_upper.c)
add_executable(ex01 programming/ex01.c)
add_executable(ex02 programming/ex02.c)
add_executable(ex03 programming/ex03.c)
add_executable(ex04 programming/ex04.c)
add_executable(ex05 programming/ex05.c)
add_executable(ex06 programming/ex06.c)
add_executable(ex07 programming/ex07.c)
add_executable(ex08 programming/ex08.c)
add_executable(ex09 programming/ex09.c)
add_executable(ex10 programming/ex10.c)
