cmake_minimum_required(VERSION 3.15)
set(CMAKE_CXX_STANDARD 14)

project(chapter07)

add_executable(square lecture/square.c)
add_executable(get_max lecture/get_max.c)
add_executable(combination lecture/combination.c)
add_executable(compute_sum lecture/compute_sum.c)
add_executable(static lecture/static.c)
add_executable(linkage lecture/linkage1.c lecture/linkage2.c)
add_executable(factorial lecture/factorial.c)
add_executable(math1 lecture/math1.c)
add_executable(random lecture/random.c)
add_executable(ex01 programming/ex01.c)
add_executable(ex02 programming/ex02.c)
add_executable(ex03 programming/ex03.c)
add_executable(ex04 programming/ex04.c)
add_executable(ex05 programming/ex05.c)
add_executable(ex06 programming/ex06.c)
add_executable(ex07 programming/ex07.c)
add_executable(ex08 programming/ex08.c)
add_executable(ex09 programming/ex09.c)
add_executable(ex10 programming/ex10.c)
add_executable(ex11 programming/ex11.c)
add_executable(ex12 programming/ex12.c)
