cmake_minimum_required(VERSION 3.15)
set(CMAKE_CXX_STANDARD 14)

project(chapter08)

add_executable(grade1 lecture/grade1.c)
add_executable(grade2 lecture/grade2.c)
add_executable(grade3 lecture/grade3.c)
add_executable(grade4 lecture/grade4.c)
add_executable(array_index lecture/array_index.c)
add_executable(grade5 lecture/grade5.c)
add_executable(grade6 lecture/grade6.c)
add_executable(grade7 lecture/grade7.c)
add_executable(minimum lecture/minimum.c)
add_executable(frequency lecture/frequency.c)
