cmake_minimum_required(VERSION 3.15)
set(CMAKE_CXX_STANDARD 14)

project(chapter09)

add_executable(address_of lecture/address_of.c)
add_executable(pointer1 lecture/pointer1.c)
add_executable(pointer2 lecture/pointer2.c)
add_executable(pointer3 lecture/pointer3.c)
add_executable(non_initialized lecture/non_initialized.c)
add_executable(type_mismatch lecture/type_mismatch.c)
add_executable(pointer_arith1 lecture/pointer_arith1.c)
add_executable(pointer_arith2 lecture/pointer_arith2.c)
add_executable(p_array1 lecture/p_array1.c)
add_executable(p_array2 lecture/p_array2.c)
add_executable(p_array3 lecture/p_array3.c)
