cmake_minimum_required(VERSION 3.15)
set(CMAKE_CXX_STANDARD 14)

project(chapter09)

add_executable(address_of lecture/address_of.c)
add_executable(pointer1 lecture/pointer1.c)
add_executable(pointer2 lecture/pointer2.c)
add_executable(pointer3 lecture/pointer3.c)
add_executable(non_initialized lecture/non_initialized.c)
add_executable(type_mismatch lecture/type_mismatch.c)
add_executable(pointer_arith1 lecture/pointer_arith1.c)
add_executable(pointer_arith2 lecture/pointer_arith2.c)
add_executable(p_array1 lecture/p_array1.c)
add_executable(p_array2 lecture/p_array2.c)
add_executable(p_array3 lecture/p_array3.c)
add_executable(swap1 lecture/swap1.c)
add_executable(swap2 lecture/swap2.c)
add_executable(slope lecture/slope.c)
add_executable(p_func lecture/p_func.c)
add_executable(fp1 lecture/fp1.c)
add_executable(ex01 programming/ex01.c)
add_executable(ex02 programming/ex02.c)
add_executable(ex03 programming/ex03.c)
add_executable(ex05 programming/ex05.c programming/ex05_cal.c)
add_executable(ex06 programming/ex06.c)
add_executable(ex07 programming/ex07.c)
