cmake_minimum_required(VERSION 3.15)
set(CMAKE_CXX_STANDARD 14)

project(chapter10)

add_executable(char_const lecture/char_const.c)
add_executable(string1 lecture/string1.c)
add_executable(string2 lecture/string2.c)
add_executable(string3 lecture/string3.c)
add_executable(getchar lecture/getchar.c)
add_executable(stringio lecture/stringio.c)
add_executable(gets lecture/gets.c)
add_executable(fgets lecture/fgets.c)
add_executable(char_process lecture/char_process.c)
add_executable(char_probe lecture/char_probe.c)
add_executable(strcpy_strcat lecture/strcpy_strcat.c)
add_executable(strcmp lecture/strcmp.c)
add_executable(token lecture/token.c)
add_executable(sprintf lecture/sprintf.c)
add_executable(atoi lecture/atoi.c)
