cmake_minimum_required(VERSION 3.15)
set(CMAKE_CXX_STANDARD 14)

project(chapter10)

add_executable(char_const lecture/char_const.c)
add_executable(string1 lecture/string1.c)
add_executable(string2 lecture/string2.c)
add_executable(string3 lecture/string3.c)
add_executable(getchar lecture/getchar.c)
add_executable(stringio lecture/stringio.c)
add_executable(gets lecture/gets.c)
add_executable(fgets lecture/fgets.c)
add_executable(char_process lecture/char_process.c)
add_executable(char_probe lecture/char_probe.c)
add_executable(strcpy_strcat lecture/strcpy_strcat.c)
add_executable(strcmp lecture/strcmp.c)
add_executable(token lecture/token.c)
add_executable(sprintf lecture/sprintf.c)
add_executable(atoi lecture/atoi.c)
add_executable(array_of_string lecture/array_of_string.c)
add_executable(dic lecture/dic.c)
add_executable(ex01 programming/ex01.c)
add_executable(ex02 programming/ex02.c)
add_executable(ex03 programming/ex03.c)
add_executable(ex04 programming/ex04.c)
add_executable(ex05 programming/ex05.c)
add_executable(ex06 programming/ex06.c)
add_executable(ex07 programming/ex07.c)
add_executable(ex08 programming/ex08.c)
add_executable(ex09 programming/ex09.c)
