cmake_minimum_required(VERSION 3.15)
set(CMAKE_CXX_STANDARD 14)

project(chapter11)

add_executable(student1 lecture/student1.c)
add_executable(student2 lecture/student2.c)
add_executable(point lecture/point.c)
add_executable(nested_struct lecture/nested_struct.c)
add_executable(array_of_struct lecture/array_of_struct.c)
add_executable(pointer_to_st lecture/pointer_to_st.c)
add_executable(st_pointer lecture/st_pointer.c)
add_executable(vector lecture/vector.c)
add_executable(union lecture/union.c)
add_executable(union1 lecture/union1.c)
add_executable(enum1 lecture/enum1.c)
add_executable(enum2 lecture/enum2.c)
add_executable(typedef lecture/typedef.c)
add_executable(ex01 programming/ex01.c)
add_executable(ex02 programming/ex02.c)
add_executable(ex03 programming/ex03.c)
add_executable(ex04 programming/ex04.c)
add_executable(ex05 programming/ex05.c)
add_executable(ex06 programming/ex06.c)
