cmake_minimum_required(VERSION 3.15)
set(CMAKE_CXX_STANDARD 14)

project(chapter12)

add_executable(fw lecture/fw.c)
add_executable(precision lecture/precision.c)
add_executable(flag lecture/flag.c)
add_executable(printf_real lecture/printf_real.c)
add_executable(scanf2 lecture/scanf2.c)
add_executable(scanf4 lecture/scanf4.c)
add_executable(scanf6 lecture/scanf6.c)
add_executable(scanf7 lecture/scanf7.c)
add_executable(file_open lecture/file_open.c)
add_executable(fputc lecture/fputc.c)
add_executable(fgetc lecture/fgetc.c)
add_executable(fcopy1 lecture/fcopy1.c)
add_executable(search lecture/search.c)
add_executable(score3 lecture/score3.c)
add_executable(binary1 lecture/binary1.c)
add_executable(binary2 lecture/binary2.c)
add_executable(binary_file lecture/binary_file.c)
add_executable(fseek lecture/fseek.c)
add_executable(ex01 programming/ex01.c)
add_executable(ex03 programming/ex03.c)
add_executable(ex04 programming/ex04.c)
add_executable(ex05 programming/ex05.c)
add_executable(ex07 programming/ex07.c)
