cmake_minimum_required(VERSION 3.15)
set(CMAKE_CXX_STANDARD 14)

project(chapter13)

add_executable(macro1 lecture/macro1.c)
add_executable(macro2 lecture/macro2.c)
add_executable(macro3 lecture/macro3.c)
add_executable(macro5 lecture/macro5.c)
add_executable(power lecture/power.c lecture/main.c)
add_executable(mainarg lecture/mainarg.c)
add_executable(mile2km lecture/mile2km.c)
add_executable(bit_op lecture/bit_op.c)
add_executable(bit_shift lecture/bit_shift.c)
add_executable(bit_field lecture/bit_field.c)
add_executable(ex01 programming/ex01.c)
add_executable(ex02 programming/ex02.c)
add_executable(ex03 programming/ex03.c programming/array.c)
add_executable(ex04 programming/ex04.c)
add_executable(ex05 programming/ex05.c)
add_executable(ex06 programming/ex06.c programming/bit_rotate.c)
add_executable(ex07 programming/ex07.c programming/graphic.c)
